--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-          {{ range first 4 (where .Data.Pages "Type" "post") }}
+          {{ $posts := or .Site.Params.PostSummariesFrontPage 4 }}
+          {{ range first $posts (where .Data.Pages "Type" "post") }}
               {{ .Render "summary"}}
           {{ end }}
           <!-- Pager -->
