--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,18 +1,19 @@
 {{ partial "header.html" . }}
 
     <!-- Page Header -->
-    <header class="intro-header" style="background-image: url('{{ .Site.BaseURL }}/img/home-bg.jpg')">
-     <div class="container">
-       <div class="row">
-         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-           <div class="site-heading">
-             <h1>{{ .Title }}</h1>
-             <hr class="small">
-             <span class="subheading">{{ .Description }}</span>
-           </div>
-         </div>
-       </div>
-     </div>
+    <header class="masthead" style="background-image: url('{{ .Site.BaseURL }}img/home-bg.jpg')">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <div class="site-heading">
+              <h1>{{ .Title }}</h1>
+              <hr class="small">
+              <span class="subheading">{{ .Description }}</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
 
     <!-- Main Content -->
@@ -20,9 +21,10 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
           {{ range .Paginator.Pages }}
-              {{ .Render "archive" }}
+              {{ .Render "summary" }}
           {{ end }}
-          {{ template "_internal/pagination.html" . }}
+
+          {{ partial "pager.html" . }}
         </div>
       </div>
     </div>
