--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -1,30 +1,31 @@
-{{ partial "header.html" . }}
+{{ partial "header.html" .}}
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('{{ .Site.BaseURL }}/img/about-bg.jpg')">
+    <header class="masthead" style="background-image: url('{{ .Site.BaseURL }}img/about-bg.jpg')">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <div class="site-heading">
+              <h1>{{ .Title }}</h1>
+              <hr class="small">
+              <span class="subheading">{{ .Description }}</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- Post Content -->
+    <article>
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div class="page-heading">
-                      <h1>{{ .Title }}</h1>
-                        <hr class="small">
-                        <span class="subheading">{{ .Description }}</span>
-                    </div>
+                <div class="col-lg-8 col-md-10 mx-auto">
+                  {{ .Content }}
                 </div>
             </div>
         </div>
-    </header>
+    </article>
 
-    <!-- Main Content -->
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-              {{ .Content }}
-              {{ partial "comments.html" .}}
-            </div>
-        </div>
-    </div>
-
-
-{{ partial "footer.html" . }}
+{{ partial "footer.html" .}}
