--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,10 +3,11 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <div class="col-lg-8 col-md-10 mx-auto">
                   <ul class="list-inline text-center">
+                    <!-- if email is set -->
                     {{ with .Site.Params.email }}
-                      <li>
+                      <li class="list-inline-item">
                         <a href="mailto:{{ . }}">
                           <span class="fa-stack fa-lg">
                             <i class="fa fa-circle fa-stack-2x"></i>
@@ -15,9 +16,10 @@
                         </a>
                       </li>
                     {{ end }}
+                    <!-- if social config is set -->
                     {{ if isset .Site.Params "social" }}
                     {{ range .Site.Params.social }}
-                    <li>
+                    <li class="list-inline-item">
                       <a href="{{ .url }}">
                         <span class="fa-stack fa-lg">
                           <i class="fa fa-circle fa-stack-2x"></i>
@@ -35,16 +37,12 @@
     </footer>
 
     <!-- jQuery -->
-    <script src="{{ .Site.BaseURL }}/js/jquery.min.js"></script>
-
+    <script src="{{ .Site.BaseURL }}js/jquery.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
-    <script src="{{ .Site.BaseURL }}/js/bootstrap.min.js"></script>
-
+    <script src="{{ .Site.BaseURL }}js/bootstrap.bundle.min.js"></script>
     <!-- Custom Theme JavaScript -->
-    <script src="{{ .Site.BaseURL }}/js/clean-blog.js"></script>
+    <script src="{{ .Site.BaseURL }}js/clean-blog.min.js"></script>
 
     {{ template "_internal/google_analytics.html" . }}
-
 </body>
-
 </html>
