--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,44 +2,41 @@
 <html lang="{{ .Site.LanguageCode }}">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{{ if .Description }}{{ .Description }}{{ end }}">
-    <meta name="author" content="{{ if .Params.author }}{{ .Params.author }}{{ else if .Site.Params.Author }}{{ .Site.Params.Author }}{{ end }}">
-    <meta name="keywords" content="{{ if .Keywords }}{{ delimit .Keywords ", " }}{{ end }}">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="{{ if .Description }}{{ .Description }}{{ end }}">
+  <meta name="author"
+    content="{{ if .Params.author }}{{ .Params.author }}{{ else if .Site.Params.Author }}{{ .Site.Params.Author }}{{ end }}">
+  <meta name="keywords" content="{{ if .Keywords }}{{ delimit .Keywords " , " }}{{ end }}">
 
-    <title>{{ .Title }} -- {{ .Site.Title }}</title>
+  <title>{{ .Title }} -- {{ .Site.Title }}</title>
+  <!-- Bootstrap Core CSS -->
+  <link href="{{ .Site.BaseURL }}/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <!-- Custom Fonts -->
+  <link href="{{ .Site.BaseURL }}/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
+    type='text/css'>
+  <link
+    href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+    rel='stylesheet' type='text/css'>
 
-    {{ if .RSSLink }}
-    <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-    <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
-    {{ end }}
-
-    <!-- {{ .Site.BaseURL }} is http://localhost:1313/ in local -->
-
-    <!-- Bootstrap Core CSS -->
-    <link href="{{ .Site.BaseURL }}css/bootstrap.min.css" rel="stylesheet" type="text/css">
-
-    <!-- Custom Fonts -->
-    <link href="{{ .Site.BaseURL }}css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
-    <!-- Custom CSS -->
-    <link href="{{ .Site.BaseURL }}css/clean-blog.min.css" rel="stylesheet" type="text/css">
+  <!-- Custom CSS -->
+  <link href="{{ .Site.BaseURL }}/css/clean-blog.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    <!-- Navigation Bar on the top -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-     <div class="container">
-       <a class="navbar-brand" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
-       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-         Menu
-         <i class="fa fa-bars"></i>
-       </button>
-       <!-- nav content -->
-       {{ partial "navbar.html" . }}
-     </div>
-   </nav>
+  <!-- Navigation Bar on the top -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand" href="{{ .Site.BaseURL }}/">{{ .Site.Title }}</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
+        Menu
+        <i class="fa fa-bars"></i>
+      </button>
+      <!-- nav content -->
+      {{ partial "navbar.html" . }}
+    </div>
+  </nav>
