update design like multi screen size support and font fixes

--- a/static/scss/_masthead.scss
+++ b/static/scss/_masthead.scss
@@ -1,7 +1,7 @@
 // Styling for the masthead
 header.masthead {
   // TIP: Background images are set within the HTML using inline CSS!
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   background: no-repeat center center;
   background-color: $gray-600;
   background-attachment: scroll;
@@ -19,31 +19,40 @@ header.masthead {
   .page-heading,
   .post-heading,
   .site-heading {
-    padding: 200px 0 150px;
     color: white;
-    @media only screen and (min-width: 768px) {
-      padding: 200px 0;
+    @media only screen and (max-width: $smart-phone-max-width) {
+      padding: 90px 0 50px;
+    }
+    @media only screen and (min-width: $smart-phone-max-width) {
+      padding: 130px 0 80px;
     }
   }
   .page-heading,
   .site-heading {
     text-align: center;
     h1 {
-      font-size: 50px;
+      @media only screen and (max-width: $smart-phone-max-width) {
+        font-size: 35px;
+      }
+      font-size: 48px;
       margin-top: 0;
+      font-weight: $font-weight-middle-bold;
+    }
+    .meta {
+      font-size: 18px;
+      a {
+        color: $cyan;
+      }
     }
     .subheading {
-      font-size: 24px;
-      font-weight: 300;
+      @media only screen and (max-width: $smart-phone-max-width) {
+        font-size: 20px;
+      }
+      font-size: 26px;
+      font-weight: $font-weight-light-bold;
       line-height: 1.1;
       display: block;
       margin: 10px 0 0;
-      @include sans-serif-font;
-    }
-    @media only screen and (min-width: 768px) {
-      h1 {
-        font-size: 80px;
-      }
     }
   }
   .post-heading {
@@ -59,7 +68,6 @@ header.masthead {
       font-size: 24px;
       font-weight: 600;
       margin: 10px 0 30px;
-      @include sans-serif-font;
     }
     .meta {
       font-size: 20px;
@@ -70,9 +78,9 @@ header.masthead {
         color: $white;
       }
     }
-    @media only screen and (min-width: 768px) {
+    @media only screen and (min-width: $tablet-max-width) {
       h1 {
-        font-size: 55px;
+        font-size: 48px;
       }
       .subheading {
         font-size: 30px;
